# AIS1002-ProsjektOppgave

./: CMakeLists.txt  README.md  chessBoardGeometry.h  chessPiecesGeometry.h  controls.h  example.h  geometryPieces.cpp  imgui.ini  main.cpp  rules.h  tests.cpp  vcpkg.json
data/: de
include/: chessBoardGeometry.h  chessPiecesGeometry.h  controls.h  rules.h
tests/: tests.cpp
